<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SesameClient</string>
    <string name="calendar_xml_retrieveButtonText">retrieve Calendar</string>
    <string name="wifi_xml_scanButtonText">Scan</string>
    <string name="wifi_xml_autoUpdateBoxText">automatic Updates</string>
    <string name="menu_exit">Exit</string>
    <string name="main_calendarTabTitle">Calendar</string>
    <string name="main_locationTabTitle">Location</string>
    <string name="main_wifiTabTitle">Wifi</string>
    <string name="main_vpnTabTitle">VPN</string>
    <string name="locationView_geoCoderWaitingMsg">reverse geocoding...</string>
    <string name="locationView_locationUpdateMsg">waiting for location update...</string>
    <string name="vpnBroadcastReceiver_connectionText">connecting, please wait...</string>
    <string name="vpnBroadcastReceiver_disconnectedSuccessfullyMsg">disconnected successfully</string>
    <string name="vpnBroadcastReceiver_connectedSuccessfullyMsg">connected successfully</string>
    <string name="vpnBroadcastReceiver_connectionFailedMsg">connection failed</string>
    <string name="vpnBroadcastReceiver_profileToastTag">profile:</string>
    <string name="vpnBroadcastReceiver_stateToastTag">state:</string>
    <string name="vpnBroadcastReceiver_errorToastTag">error:</string>
    <string name="vpnBroadcastReceiver_connectionProgressDialogMessage">connecting...</string>
    <string name="vpnBroadcastReceiver_connectionProgressDialogTitle">VPN</string>
    <string name="vpnBroadcastReceiver_alertDialogNeutralButtonText">ok</string>
    <string name="calendarevent_xml_calendarEventTitle">Calendar Event</string>
    <string name="calendarevent_xml_titleTag">Title:</string>
    <string name="calendarevent_xml_beginTag">Begin:</string>
    <string name="calendarevent_xml_endTag">End:</string>
    <string name="calendarevent_xml_allDayTag">All Day:</string>
    <string name="calendarevent_xml_descritpionTag">Descritpion:</string>
    <string name="calendarevent_xml_locationTag">Location:</string>
    <string name="location_xml_reverseGeoCodingButtonText">GeoCoder</string>
    <string name="location_xml_autoGeoCoderUpdateCheckBoxText">autoupdate GeoCoder</string>
    <string name="location_xml_latitudeTag">Latitude:</string>
    <string name="location_xml_longitudeTag">Longitude:</string>
    <string name="location_xml_qualityTag">Quality:</string>
    <string name="location_xml_offsetLatTag">offSetLat:</string>
    <string name="location_xml_offsetLonTag">offsetLon:</string>
    <string name="location_xml_radiusTag">Radius:</string>
    <string name="location_xml_nameTag">Name:</string>
    <string name="location_xml_line1Tag">Line1:</string>
    <string name="location_xml_line2Tag">Line2:</string>
    <string name="location_xml_line3Tag">Line3:</string>
    <string name="location_xml_line4Tag">Line4:</string>
    <string name="location_xml_houseTag">House:</string>
    <string name="location_xml_streetTag">Street:</string>
    <string name="location_xml_xStreetTag">XStreet:</string>
    <string name="location_xml_unitTypeTag">UnitType:</string>
    <string name="location_xml_unitTag">Unit:</string>
    <string name="location_xml_postalTag">Postal:</string>
    <string name="location_xml_neighborhoodTag">Neighborhood:</string>
    <string name="location_xml_cityTag">City:</string>
    <string name="location_xml_countyTag">County:</string>
    <string name="location_xml_stateTag">State:</string>
    <string name="location_xml_countryTag">Country:</string>
    <string name="location_xml_countryCodeTag">CountryCode:</string>
    <string name="location_xml_stateCodeTag">Statecode:</string>
    <string name="location_xml_countyCodeTag">Countycode:</string>
    <string name="location_xml_hashTag">Hash:</string>
    <string name="location_xml_woeidTag">WOEID:</string>
    <string name="location_xml_woeTypeTag">WOE Type:</string>
    <string name="location_xml_uzipTag">UZIP:</string>
    <string name="vpn_xml_connectButtonText">connect to VPN</string>
    <string name="vpn_xmldisconnectButtonText">disconnect from VPN</string>
    <string name="misc_xml_replaceKeystoreButtonText">replace Keystore</string>
    <string name="misc_xml_importCertificateButtonText">import certificate</string>
    <string name="misc_xml_toastDirectoriesButtonText">toast Directories</string>
    <string name="misc_xml_toastRunningServicesButtonText">toast running services</string>
    <string name="main_miscTabTitle">Misc</string>
    <string name="misc_negativeKeystoreToastMsg">no suitable copy command was found!
 Keystore was NOT replaced</string>
    <string name="misc_positiveKeystoreToastMsg">Keystore replaced successfully.</string>
    <string name="calendarView_calendarResolveErrorMsg">Calendar could not be resolved</string>
    <string name="calendarAccess_allCalendarListentry">ALL</string>
    <string name="calendarView_calendarSelectionDialogTitle">Choose a calendar</string>
    <string name="calendarView_emptyCalendarToastMsg">selected Calendar is empty.</string>
    <string name="main_chartsTabTitle">Charts</string>
    <string name="widget_connectButtonText">connect</string>
    <string name="widget_disconnectButtonText">disconnect</string>
    <string name="widget_title">Sesame VPN Connection</string>
    <string name="VpnException_userNotSet">user not set</string>
    <string name="VpnException_passwordNotSet">password not set</string>
    <string name="VpnException_serverNotSet">server not set</string>
    <string name="VpnException_defaultMessage">VPN exception</string>
    <string name="VpnException_settingsNotValid">the passed vpn settings were invalid</string>
    <string name="VpnException_settingsConflict">the specified connection mode is in conflict with the VPN settings</string>
    <string name="VpnView_vpnModeSelectionCert">Certificate based</string>
    <string name="VpnView_vpnModeSelectionPSK">pre-shared key based</string>
    <string name="VpnView_vpnModeSelectionTitle">choose VPN mode</string>
    <string name="VpnView_pskConnectionDialogMsg">please insure that your phone is rooted and that the keystore is replaced</string>
    <string name="VpnView_pskConnectionDialogButtonText">ok</string>
    <string name="VpnView_noInternetConnectionMsg">please establish internet connection first...</string>
    <string name="VpnView_crtConnectionDialogMsg">you are connected via wifi, problems could occur due to NAT.</string>
    <string name="VpnView_crtConnectionDialogButtonText">ok</string>
    <string name="misc_xml_storeCertificateButtonText">store certificate</string>
    <string name="wifi_recorder_view_xml_startButtonText">start recording</string>
    <string name="wifi_recorder_view_xml_stopButtonText">stop recording</string>
    <string name="main_wifiRecorderTabTitle">WifiRecorder</string>
    <string name="WifiRecorder_toastMessageText">number of scans:</string>
    <string name="wifi_recorder_view_xml_exportButtonText">export</string>
    <string name="wifi_recorder_view_xml_selectLocButtonText">select Location</string>
    <string name="WifiRecorder_invalidLocationToastMsg">scans will not be logged, location is invalid</string>
    <string name="WifiRecorderView_chooseLocationDialogTitle">choose Location</string>
    <string name="WifiRecorder_exportSuccessfulToastMsg">export successful</string>
    <string name="WifiRecorder_exportMenuTitle">Export</string>
    <string name="wifi_recorder_view_xml_autoModeCBText">automatic mode</string>
    <string name="wifi_recorder_view_xml_MPReachedButtonText">MP reached: </string>
    <string name="WifiRecorder_progressDialogPrefix">Measuring @ </string>
    <string name="WifiRecorder_finishedToastMsg">measurement has finished</string>
    <string name="chartView_settingsMenuItem">Settings</string>
    <string name="chartNavigationXML_dayButtonText">Day</string>
    <string name="chartNavigationXML_monthButtonText">Month</string>
    <string name="chartNavigationXML_yearButtonText">Year</string>
    <string name="chartNavigationXML_rankingButtonText">setup ranking</string>
</resources>
