<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="match_parent"
  android:layout_height="match_parent" android:orientation="horizontal" android:layout_margin="10px" android:padding="10px" android:layout_gravity="center|center_horizontal">
    <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/chartNavigationDayButton" android:text="@string/chartNavigationXML_dayButtonText"></Button>
    <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/chartNavigationXML_monthButtonText" android:id="@+id/chartNavigationMonthButton"></Button>
    <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/chartNavigationYearButton" android:text="@string/chartNavigationXML_yearButtonText"></Button>
    <ToggleButton android:text="ToggleButton" android:id="@+id/toggleButton1" android:layout_width="wrap_content" android:layout_height="wrap_content"></ToggleButton>
    
</LinearLayout>
