<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widgetFrameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:background="@android:color/black">
    <LinearLayout
        android:id="@+id/widget_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent" android:orientation="vertical" android:gravity="center_horizontal">
        <TextView 	android:text="@string/widget_title" 
        			android:id="@+id/textView1" 
        			android:textAppearance="?android:attr/textAppearanceMedium" 
        			android:layout_width="wrap_content" 
        			android:layout_height="wrap_content" android:layout_gravity="center_horizontal"></TextView>
        <LinearLayout
          android:orientation="horizontal"
          android:layout_width="match_parent"
          android:layout_height="match_parent" android:layout_gravity="center_horizontal">
            <Button android:text="@string/widget_connectButtonText" 
            		android:id="@+id/widgetConnect" 
            		android:layout_width="wrap_content" 
            		android:layout_height="wrap_content" android:gravity="center"></Button>
            
            <Button android:text="@string/widget_disconnectButtonText" 
            		android:id="@+id/widgetDisconnect" 
            		android:layout_width="wrap_content" 
            		android:layout_height="wrap_content" android:layout_gravity="right"></Button>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>
